# Hatronic-Core

./: .gitmodules  CMakeLists.txt  README.md
chips/: arm-none-eabi-gcc.cmake
chips/stm32wb55/: CMakeLists.txt  README.md
cmake/: HatronicCore.h.in  HatronicCoreConfig.cmake  HatronicCoreExport.cmake
lib/: CMakeLists.txt
lib/src/: Array.h  Fifo.c  Fifo.h  Status.h  StatusCodes.h
src/: Array.h  Fifo.c  Fifo.h  Status.h  StatusCodes.h
src/DataStructures/: LinkedList.c  LinkedList.h
test/: project.yml
test/src/: test_Fifo.c  test_LinkedList.c  test_Status.c
